added inline hero images to header

--- a/yacht.html
+++ b/yacht.html
@@ -7,6 +7,21 @@
   <title>Yacht</title>
   <link rel="stylesheet" href="css/app.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <!-- Hero images -->
+  <style>
+    .hero {
+      background-image: url(../img/hero/hero-sm.jpg);
+    }
+    @media screen and (min-width: 480px) {
+      .hero { background-image: url(../img/hero/hero-md.jpg); }
+    }
+    @media screen and (min-width: 768px) {
+      .hero { background-image: url(../img/hero/hero-lg.jpg); }
+    }
+    @media screen and (min-width: 1200px) {
+      .hero { background-image: url(../img/hero/hero-xl.jpg); }
+    }
+  </style>
 </head>
 <body>
 
