--- a/yacht.html
+++ b/yacht.html
@@ -25,8 +25,57 @@
 </head>
 <body>
 
-<header class="text-center">
-  header
+<!-- Off-canvas Menu -->
+<div class="off-canvas position-left" id="offCanvas" data-off-canvas>
+  <!-- Your menu or Off-canvas content goes here -->
+
+  <!-- Close button -->
+  <button class="close-button" aria-label="Close menu" type="button" data-close>
+    <span aria-hidden="true">&times;</span>
+  </button>
+
+  <!-- Menu -->
+  <ul class="vertical menu">
+    <li><a href="#">Foundation</a></li>
+    <li><a href="#">Dot</a></li>
+    <li><a href="#">ZURB</a></li>
+    <li><a href="#">Com</a></li>
+    <li><a href="#">Slash</a></li>
+    <li><a href="#">Sites</a></li>
+  </ul>
+
+</div>
+
+<!-- Off-canvas Content -->
+<div class="off-canvas-content" data-off-canvas-content>
+
+<header class="sc-header">
+  <div class="sc-top-bar top-bar">
+    <div class="top-bar-left">
+      <ul class="dropdown menu sc-menu" data-dropdown-menu>
+        <li class="menu-text">Sail Connections</li>
+        <li>
+          <a href="#">Charter Yachts</a>
+          <ul class="menu vertical">
+            <li><a href="#">Sailing Yachts</a></li>
+            <li><a href="#">Catamarans</a></li>
+            <li><a href="#">Crewed Yachts</a></li>
+            <li><a href="#">All Yachts</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Destinations</a></li>
+        <li><a href="#">Our Services</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div class="top-bar-right">
+      <ul class="menu">
+        <li><button type="button" class="button secondary" data-toggle="offCanvas">Open Menu</button></li>
+      </ul>
+    </div>
+  </div>
 </header>
 
 <section class="hero">
