initial commit: added icomoon icons to project

--- a/yacht.html
+++ b/yacht.html
@@ -74,7 +74,12 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu">
-        <li><button type="button" class="button secondary" data-toggle="offCanvas">Open Menu</button></li>
+        <li>
+          <button type="button" class="button secondary button-icon-left" data-toggle="offCanvas">
+            <i class="sc-icon-chat" aria-hidden="true"></i>
+            Enquire
+          </button
+        ></li>
       </ul>
     </div>
   </div>
@@ -245,10 +250,10 @@
               <li>Contact</li>
             </ul>
             <ul class="footer-nav-social list-unstyled list-inline">
-              <li>FB</li>
-              <li>TW</li>
-              <li>LI</li>
-              <li>IN</li>
+              <li><a href="#"><span class="show-for-sr">Facebook</span><i class="sc-icon-facebook" aria-hidden="true"></i></a></li>
+              <li><a href="#"><span class="show-for-sr">Twitter</span><i class="sc-icon-twitter" aria-hidden="true"></i></a></li>
+              <li><a href="#"><span class="show-for-sr">Instagram</span><i class="sc-icon-instagram" aria-hidden="true"></i</a>></li>
+              <li><a href="#"><span class="show-for-sr">Linkedin</span><i class="sc-icon-linkedin" aria-hidden="true"></i></a></li>
             </ul>
           </nav>
         </div>
