added client logo svg

--- a/yacht.html
+++ b/yacht.html
@@ -55,7 +55,9 @@
   <div class="sc-top-bar top-bar">
     <div class="top-bar-left">
       <ul class="dropdown menu sc-menu" data-dropdown-menu>
-        <li class="menu-text">Sail Connections</li>
+        <li class="menu-text">
+          <img class="logo" src="img/sc-logo.svg" alt="Sail Connections">
+        </li>
         <li>
           <a href="#">Charter Yachts</a>
           <ul class="menu vertical">
