updates to simplify section hero content, added base rules for mobile and desktop tabs

--- a/yacht.html
+++ b/yacht.html
@@ -139,7 +139,7 @@
   <div class="grid-x grid-padding-x">
     <div class="large-12 cell">
 
-      <section class="content-tabs padding-bottom-3">
+      <section class="section-page-tabs page-tabs padding-bottom-3">
         <ul class="tabs" data-responsive-accordion-tabs="tabs small-accordion large-tabs" id="page-tabs">
           <li class="tabs-title is-active"><a href="#panelAbout" aria-selected="true">Overview</a></li>
           <li class="tabs-title"><a href="#panelSpecifications">Specifications</a></li>
@@ -148,7 +148,7 @@
         </ul>        
         <div class="tabs-content" data-tabs-content="page-tabs">
           <div class="tabs-panel is-active" id="panelAbout">
-            <h3 class="tabs-panel-title text-center">Lagoon 52, Bareboat Catamaran Charter</h3>
+            <h3 class="tabs-panel-title">Lagoon 52, Bareboat Catamaran Charter</h3>
             <p>As bareboat sailors have gained confidence, the boats available for charter have increased in size. The Lagoon 52 is one of those newer, high-volume catamarans with performance features that make the whole sailing experience pure luxury that everyone can enjoy in comfort. Good crew quarters make this model equally ideal as a crewed bareboat option. With a knowledgeable skipper and crew aboard, sit back, let someone else do most of the work, and truly relax on your sailing vacation.</p>
             <div class="content feature-box">
               <dl class="overview-list">
@@ -176,15 +176,15 @@
             <p>The Lagoon 52 is available bareboat, crewed bareboat, and in several locations permanently crewed for the ultimate luxury sailing holiday.</p>
           </div>
           <div class="tabs-panel" id="panelSpecifications">
-            <h3 class="tabs-panel-title text-center">Specifications</h3>
+            <h3 class="tabs-panel-title">Specifications</h3>
             <p>two</p>
           </div>
           <div class="tabs-panel" id="panelSkipperedOptions">
-            <h3 class="tabs-panel-title text-center">Skippered Options</h3>
+            <h3 class="tabs-panel-title">Skippered Options</h3>
             <p>three</p>
           </div>
           <div class="tabs-panel" id="paneCrewOptions">
-            <h3 class="tabs-panel-title text-center">Crew Options</h3>
+            <h3 class="tabs-panel-title">Crew Options</h3>
             <p>four</p>
           </div>
         </div>
@@ -201,10 +201,10 @@
         </div>
       </section>
 
-      <section class="reviews padding-bottom-3">
+      <section class="section-reviews padding-bottom-3">
         <div class="content">
-          <div class="section-intro">
-            <h3 class="section-feature-title text-center">Lagoon 52 Reviews</h3>
+          <div class="content-cta text-center">
+            <h3 class="content-cta-title">Lagoon 52 Reviews</h3>
           </div>
           <div class="grid-x grid-padding-y grid-margin-x">
             <blockquote class="large-6 cell">
@@ -229,8 +229,8 @@
       <div class="large-12 cell">
 
         <div class="content">
-          <div class="section-intro text-center">
-            <h3 class="section-feature-title">The Sail Connections Guarantee</h3>
+          <div class="content-cta text-center">
+            <h3 class="content-cta-title">The Sail Connections Guarantee</h3>
             <p>One contact - every option - advice you can trust.</p>
           </div>
           <ul class="list-unstyled list-column list-column-2 list-column-features">
@@ -241,7 +241,7 @@
             <li>Advising without bias based on 25+ years of experience</li>
             <li>We do more than just book yachts!</li>
           </ul>
-          <div class="section-cta text-center">
+          <div class="text-center">
             <p>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</p>
             <a href="#" class="button button-icon-left secondary"><i class="sc-icon-mail" aria-hidden="true"></i> Get in Touch</a>
           </div>
@@ -258,11 +258,11 @@
       <div class="large-12 cell">
 
         <div class="content content-overlay text-center">
-          <h3 class="section-feature-title">The Essential Guide to Sailing Holiday Charters</h3>
-          <p>The Sail Connections Essential Guide to Bareboat and Crewed Sailing Holiday Charters is jam-packed full of useful tips for getting the most out of your next boat charter. And it is FREE to download.</p>
-          <div class="section-cta text-center">
-            <a href="#" class="button">Download Guide</a>
-          </div>
+					<div class="content-cta">
+          	<h3 class="content-cta-title">The Essential Guide to Sailing Holiday Charters</h3>
+						<p>The Sail Connections Essential Guide to Bareboat and Crewed Sailing Holiday Charters is jam-packed full of useful tips for getting the most out of your next boat charter. And it is FREE to download.</p>
+						<a href="#" class="button">Download Guide</a>
+					</div>
         </div>
 
       </div><!-- large-12 cell -->
