removed hide class from header as will change to something else later, set tab/accordion definitions for sm, md, lg

--- a/yacht.html
+++ b/yacht.html
@@ -86,7 +86,7 @@
         <li class="menu-text">
           <img class="logo" src="img/sc-logo.svg" alt="Sail Connections">
         </li>
-        <li class="show-for-medium">
+        <li>
           <a href="#">Charter Yachts</a>
           <ul class="menu vertical">
             <li><a href="#">Sailing Yachts</a></li>
@@ -95,11 +95,11 @@
             <li><a href="#">All Yachts</a></li>
           </ul>
         </li>
-        <li class="show-for-medium"><a href="#">Destinations</a></li>
-        <li class="show-for-medium"><a href="#">Our Services</a></li>
-        <li class="show-for-medium"><a href="#">About Us</a></li>
-        <li class="show-for-medium"><a href="#">News</a></li>
-        <li class="show-for-medium"><a href="#">Contact</a></li>
+        <li><a href="#">Destinations</a></li>
+        <li><a href="#">Our Services</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </div>
     <div class="top-bar-right">
@@ -140,7 +140,7 @@
     <div class="large-12 cell">
 
       <section class="section-page-tabs page-tabs padding-bottom-3">
-        <ul class="tabs" data-responsive-accordion-tabs="tabs small-accordion large-tabs" id="page-tabs">
+        <ul class="tabs" data-active-collapse="true" data-responsive-accordion-tabs="tabs small-accordion medium-tabs large-tabs" id="page-tabs">
           <li class="tabs-title is-active"><a href="#panelAbout" aria-selected="true">Overview</a></li>
           <li class="tabs-title"><a href="#panelSpecifications">Specifications</a></li>
           <li class="tabs-title"><a href="#panelSkipperedOptions">Skippered Options</a></li>
