update header paths to banner images, initial commit for yacht with secondary header

--- a/yacht-secondary.html
+++ b/yacht-secondary.html
@@ -12,16 +12,16 @@
   <!-- Hero images -->
   <style>
     .hero {
-      background-image: url(../img/banners/hero-sm.jpg);
+      background-image: url(../img/banners/default-banner.jpg);
     }
     @media screen and (min-width: 480px) {
-      .hero { background-image: url(../img/banners/hero-md.jpg); }
+      .hero { background-image: url(../img/banners/default-banner.jpg); }
     }
     @media screen and (min-width: 768px) {
-      .hero { background-image: url(../img/banners/hero-lg.jpg); }
+      .hero { background-image: url(../img/banners/default-banner.jpg); }
     }
     @media screen and (min-width: 1200px) {
-      .hero { background-image: url(../img/banners/hero-xl.jpg); }
+      .hero { background-image: url(../img/banners/default-banner-xl.jpg); }
     }
   </style>
 </head>
@@ -121,13 +121,13 @@
   </div>
 </header>
 
-<section class="hero">
+<section class="hero hero-secondary">
   <div class="grid-container">
     <div class="grid-x">
       <div class="cell">
         <div class="content">
           <div class="hero-title-wrap">
-            <h1 class="hero-title">Lagoon 52</h1>
+            <h1 class="hero-title">Lagoon 52, Bareboat Catamaran</h1>
           </div>
         </div>
       </div>
@@ -164,9 +164,9 @@
             </div>
 
             <div class="sc-carousel carousel" data-flickity='{"fullscreen": true, "lazyLoad": 2, "pageDots": false, "cellAlign": "left"}'>
-              <div class="carousel-cell"><img src="/img/hero/hero-sm.jpg" /></div>
-              <div class="carousel-cell"><img src="/img/hero/hero-sm.jpg" /></div>
-              <div class="carousel-cell"><img src="/img/hero/hero-sm.jpg" /></div>
+              <div class="carousel-cell"><img src="/img/banners/hero-sm.jpg" /></div>
+              <div class="carousel-cell"><img src="/img/banners/hero-sm.jpg" /></div>
+              <div class="carousel-cell"><img src="/img/banners/hero-sm.jpg" /></div>
             </div>
 
             <p>In creating the 52, the people at Lagoon have excelled, making innovative and sometimes radical choices to deliver elegance, comfort, user-friendliness and, it goes without saying, top cruising performance under sail.</p>
