updated paths, initial commit of home html

--- a/home.html
+++ b/home.html
@@ -12,16 +12,16 @@
   <!-- Hero images -->
   <style>
     .hero {
-      background-image: url(../img/banners/hero-sm.jpg);
+      background-image: url(../img/banners/default-banner.jpg);
     }
     @media screen and (min-width: 480px) {
-      .hero { background-image: url(../img/banners/hero-md.jpg); }
+      .hero { background-image: url(../img/banners/default-banner.jpg); }
     }
     @media screen and (min-width: 768px) {
-      .hero { background-image: url(../img/banners/hero-lg.jpg); }
+      .hero { background-image: url(../img/banners/default-banner.jpg); }
     }
     @media screen and (min-width: 1200px) {
-      .hero { background-image: url(../img/banners/hero-xl.jpg); }
+      .hero { background-image: url(../img/banners/default-banner-xl.jpg); }
     }
   </style>
 </head>
@@ -127,7 +127,7 @@
       <div class="cell">
         <div class="content">
           <div class="hero-title-wrap">
-            <h1 class="hero-title">Lagoon 52</h1>
+            <h1 class="hero-title">Lagoon 52, Bareboat Catamaran</h1>
           </div>
         </div>
       </div>
@@ -227,27 +227,63 @@
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
       <div class="large-12 cell">
-
         <div class="content">
           <div class="content-cta text-center">
-            <h3 class="content-cta-title">The Sail Connections Guarantee</h3>
-            <p>One contact - every option - advice you can trust.</p>
-          </div>
-          <ul class="list-unstyled list-column list-column-2 list-column-features">
-            <li>Matching any competitive offer</li>
-            <li>Sourcing boats with discounts available</li>
-            <li>Personalising our proposal just for you</li>
-            <li>Qualifying the operator as well as the boat</li>
-            <li>Advising without bias based on 25+ years of experience</li>
-            <li>We do more than just book yachts!</li>
-          </ul>
-          <div class="text-center">
-            <p>We will match any discount website offer on charter boat price, and still provide our customary high level of service.</p>
-            <a href="#" class="button button-icon-left secondary"><i class="sc-icon-mail" aria-hidden="true"></i> Get in Touch</a>
-          </div>
-        </div>
+            <h3 class="content-cta-title">Featured Yacht Charter Destinations</h3>
+					</div>
+				</div>
+			</div><!-- large-12 cell -->
 
-      </div><!-- large-12 cell -->
+			<div class="large-4 cell">
+				<div class="card">
+					<img src="assets/img/generic/rectangle-1.jpg">
+					<div class="card-section">
+						<h4>Southern Dalmatian Islands</h4>
+					</div>
+				</div>
+			</div>
+			<div class="large-4 cell">
+				<div class="card">
+					<img src="assets/img/generic/rectangle-1.jpg">
+					<div class="card-section">
+						<h4>Kornati Islands &amp; Zadar</h4>
+					</div>
+				</div>
+			</div>
+			<div class="large-4 cell">
+				<div class="card">
+					<img src="assets/img/generic/rectangle-1.jpg">
+					<div class="card-section">
+						<h4>Istria &amp; Northern Adriatic</h4>
+					</div>
+				</div>
+			</div>
+			<div class="large-4 cell">
+				<div class="card">
+					<a href="#">
+					<img src="assets/img/generic/rectangle-1.jpg">
+					<div class="card-section">
+						<h4>Southern Dalmatian Islands</h4>
+					</div></a>
+				</div>
+			</div>
+			<div class="large-4 cell">
+				<div class="card">
+					<img src="assets/img/generic/rectangle-1.jpg">
+					<div class="card-section">
+						<h4>Kornati Islands &amp; Zadar</h4>
+					</div>
+				</div>
+			</div>
+			<div class="large-4 cell">
+				<div class="card">
+					<img src="assets/img/generic/rectangle-1.jpg">
+					<div class="card-section">
+						<h4>Istria &amp; Northern Adriatic</h4>
+					</div>
+				</div>
+			</div>
+
     </div><!-- grid-x grid-padding-x -->
   </div><!-- grid-container -->
 </section>
