Add list to yacht page

--- a/yacht.html
+++ b/yacht.html
@@ -177,7 +177,20 @@
           </div>
           <div class="tabs-panel" id="panelSpecifications">
             <h3 class="tabs-panel-title">Specifications</h3>
-            <p>two</p>
+            <ul class="spec-list no-bullet">
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+            </ul>
           </div>
           <div class="tabs-panel" id="panelSkipperedOptions">
             <h3 class="tabs-panel-title">Skippered Options</h3>
