Style tweaks to CTA boxes
1. Aligned bottom CTA quote box vertically 2. Increased max width to stop heading wrapping 3. Added horizontal links to CTA list to add some structure

--- a/yacht.html
+++ b/yacht.html
@@ -205,10 +205,10 @@
     
       <section class="section-cta-inline padding-bottom-3">
         <div class="grid-x content feature-box">
-          <div class="medium-9 cell cell-center">
-            <p>Receive a personalized proposal with boat, cost and extra options as applicable.</p>
+          <div class="medium-9 cell cell-center align-middle">
+            <span>Receive a personalized proposal with boat, cost and extra options as applicable.</span>
           </div>
-          <div class="medium-3 cell cell-center cell-buttons">
+          <div class="medium-3 cell cell-center cell-buttons align-middle">
             <a href="#" class="button secondary">Get in Touch</a>
           </div>
         </div>
