Adjust Tabs/Accordion Breakpoints
Increased breakpoint for more tabs and added option to close all accordions

--- a/yacht.html
+++ b/yacht.html
@@ -140,7 +140,7 @@
     <div class="large-12 cell">
 
       <section class="section-page-tabs page-tabs padding-bottom-1">
-        <ul class="tabs" data-active-collapse="true" data-responsive-accordion-tabs="tabs small-accordion medium-tabs large-tabs" id="page-tabs">
+        <ul class="tabs" data-active-collapse="true" data-allow-all-closed="true"data-responsive-accordion-tabs="tabs small-accordion medium-accordion large-tabs" id="page-tabs">
           <li class="tabs-title is-active"><a href="#panelAbout" aria-selected="true">Overview</a></li>
           <li class="tabs-title"><a href="#panelSpecifications">Specifications</a></li>
           <li class="tabs-title"><a href="#panelSkipperedOptions">Skippered Options</a></li>
