--- a/yacht.html
+++ b/yacht.html
@@ -86,7 +86,7 @@
         <li class="menu-text">
           <img class="logo" src="img/sc-logo.svg" alt="Sail Connections">
         </li>
-        <li>
+        <li class="show-for-large">
           <a href="#">Charter Yachts</a>
           <ul class="menu vertical">
             <li><a href="#">Sailing Yachts</a></li>
@@ -95,11 +95,11 @@
             <li><a href="#">All Yachts</a></li>
           </ul>
         </li>
-        <li><a href="#">Destinations</a></li>
-        <li><a href="#">Our Services</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="show-for-large"><a href="#">Destinations</a></li>
+        <li class="show-for-large"><a href="#">Our Services</a></li>
+        <li class="show-for-large"><a href="#">About Us</a></li>
+        <li class="show-for-large"><a href="#">News</a></li>
+        <li class="show-for-large"><a href="#">Contact</a></li>
       </ul>
     </div>
     <div class="top-bar-right">
@@ -110,7 +110,7 @@
             <span class="button-text">Enquire</span>
           </a>
         </li>
-        <li>
+        <li class="hide-for-large">
           <button type="button" class="button button-secondary-3 button-icon-left" data-toggle="offCanvas">
             <i class="sc-icon-menu" aria-hidden="true"></i>
             <span class="button-text">Menu</span>
