--- a/yacht.html
+++ b/yacht.html
@@ -236,7 +236,7 @@
   </div><!-- grid-x grid-padding-x -->
 </div><!-- grid-container -->
 
-<section class="section-feature section-gray">
+<section class="section-feature section-bg-grey">
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
       <div class="large-12 cell">
@@ -341,7 +341,7 @@
 
 	<form>
 		<div class="grid-container full">
-			<div class="grid-x grid-margin-x">
+			<div class="grid-x">
 				<div class="medium-4 cell">
 					<label>First Name:
 						<input type="text" placeholder="First name">
